# texlink-analytics-platform

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  README.pt-br.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  business_glossary.md  data_dictionary.md
scripts/: deploy.sh  run_models.sh  setup_db.sh
src/analytics/: clv_model.py  cohort_analysis.py  customer_journey.py  match_optimization.py  scoring_model.py
src/dashboards/: app.py  db.py
src/dashboards/components/: __init__.py  charts.py  filters.py  kpi_cards.py
src/dashboards/pages/: 01_platform_overview.py  02_demand_analytics.py  03_supply_analytics.py  04_customer_journey.py  05_matching_efficiency.py  06_financial_analytics.py  __init__.py
src/database/: functions.sql  indexes.sql  schema.sql
src/models/: run_all.py
src/models/marts/: marts_cohort_analysis.sql  marts_customer_journey.sql  marts_empresa_clv.sql  marts_geographic_analysis.sql  marts_match_quality.sql  marts_oficina_scoring.sql  marts_platform_kpis.sql  marts_revenue_analytics.sql
src/models/staging/: stg_avaliacoes.sql  stg_certificacoes.sql  stg_empresas.sql  stg_eventos_plataforma.sql  stg_oficinas.sql  stg_pagamentos.sql  stg_pedido_items.sql  stg_pedidos.sql  stg_producao.sql  stg_propostas.sql  stg_usuarios.sql
src/seeds/: seed_config.yaml  seed_generator.py  seed_loader.py
tests/: test_analytics.py  test_schema.py  test_seeds.py
