[project]
name = "texlink-analytics"
version = "1.0.0"
description = "Full-stack analytics platform for Texlink textile marketplace"
requires-python = ">=3.11"
authors = [{ name = "Moro" }]
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
